fix dashboard link

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -570,7 +570,7 @@
                 <div class="col-lg-6 col-7">
                   <h6>INTENTOS DE SUICIDOS</h6>
                   <p class="text-sm mb-0">
-                    <span class="font-weight-bold ms-1">622</span> en 2022
+                    <span class="font-weight-bold ms-1">424</span> del 2010 al 2016
                   </p>
                 </div>
                 
