--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div class="">
       <div class="col-10 m-auto text-center">
-        <a class="btn bg-gradient-primary mt-3 w-100" href="/pages/dashboard.html">Ir al DashBoard</a>
+        <a class="btn bg-gradient-primary mt-3 w-100" href="/Entre-libros-y-presiones/pages/dashboard.html">Ir al DashBoard</a>
       </div>
     </div>
 
